@@ -3,9 +3,25 @@
 #endif
 #include <Elementary.h>
 
+#define POPUP_POINT_MAX 6
+
+typedef struct
+{
+   double x;
+   double y;
+}Evas_Rel_Coord_Point;
 
 static Evas_Object *g_popup = NULL;
 static int times = 0;
+static Evas_Rel_Coord_Point _popup_point[POPUP_POINT_MAX] =
+{
+   { 0.01, 0.01 },
+   { 0.2, 0.2 },
+   { 0.5, 0.5 },
+   { 0.99, 0.01 },
+   { 0.01, 0.99 },
+   { 0.99, 0.99 }
+};
 
 static void
 _response_cb(void *data EINA_UNUSED, Evas_Object *obj,
@@ -19,6 +35,23 @@ _popup_close_cb(void *data, Evas_Object *obj EINA_UNUSED,
                 void *event_info EINA_UNUSED)
 {
    evas_object_del(data);
+}
+
+static void
+_popup_move_cb(void *data, Evas_Object *obj EINA_UNUSED,
+               void *event_info EINA_UNUSED)
+{
+   static int k = 0;
+   double h = -1, v = -1;
+
+   elm_popup_align_set(data, _popup_point[k].x, _popup_point[k].y);
+   elm_popup_align_get(data, &h, &v);
+
+   printf("elm_popup_align_get :: Aligned: %lf %lf\n", h, v);
+
+   k++;
+   if (k >= POPUP_POINT_MAX)
+     k = 0;
 }
 
 static void
@@ -498,6 +531,33 @@ _popup_transparent_cb(void *data, Evas_Object *obj EINA_UNUSED,
 }
 
 static void
+_popup_transparent_move_cb(void *data, Evas_Object *obj EINA_UNUSED,
+                           void *event_info EINA_UNUSED)
+{
+   Evas_Object *popup;
+   Evas_Object *btn, *btn1;
+
+   popup = elm_popup_add(data);
+   elm_object_style_set(popup, "transparent");
+   elm_object_text_set(popup, "This Popup has transparent background");
+
+   // popup buttons
+   btn = elm_button_add(popup);
+   elm_object_text_set(btn, "Move");
+   elm_object_part_content_set(popup, "button1", btn);
+   evas_object_smart_callback_add(btn, "clicked", _popup_move_cb, popup);
+
+   btn1 = elm_button_add(popup);
+   elm_object_text_set(btn1, "Close");
+   elm_object_part_content_set(popup, "button2", btn1);
+   evas_object_smart_callback_add(btn1, "clicked", _popup_close_cb, popup);
+
+   // popup show should be called after adding all the contents and the buttons
+   // of popup to set the focus into popup's contents correctly.
+   evas_object_show(popup);
+}
+
+static void
 _list_cb(void *data, Evas_Object *obj EINA_UNUSED, void *event_info EINA_UNUSED)
 {
    evas_object_del(data);
@@ -578,6 +638,8 @@ test_popup(void *data EINA_UNUSED, Evas_Object *obj EINA_UNUSED,
                         _popup_center_text_3button_add_remove_button_cb, win);
    elm_list_item_append(list, "popup-transparent", NULL, NULL,
                         _popup_transparent_cb, win);
+   elm_list_item_append(list, "popup-transparent-move", NULL, NULL,
+                        _popup_transparent_move_cb, win);
    elm_list_item_append(list, "popup-center-title + list content + 1 button",
                         NULL, NULL, _popup_center_title_list_content_1button_cb,
                         win);
